--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@prisma/adapter-neon": "^5.18.0",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons": "^3.12.0",
+    "@tabler/icons-react": "^3.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
