Login completo, inicio de creacion de tareas

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ AUTH_SECRET=secret
 AUTH_URL=http://localhost:3000
 
 NEXT_URL=http://localhost:3000
+
+DATABASE_URL="postgresql://linx_owner:QzojURlg5sr0@ep-nameless-dawn-a5ev5oq5-pooler.us-east-2.aws.neon.tech/taskly?sslmode=require"
