--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 AUTH_GITHUB_ID=Ov23liE8bvxVagptoGsq
 AUTH_GITHUB_SECRET=403e51ec16dab348648d233bc8baa311b4402d62
 
+AUTH_GOOGLE_ID=764049493052-kac9p1ghchp9fnq5sgsur0hcs3op5vr2.apps.googleusercontent.com
+AUTH_GOOGLE_SECRET=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
+
 AUTH_SECRET=secret
+
 AUTH_URL=http://localhost:3000
 
 NEXT_URL=http://localhost:3000
